--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,32 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(121, 121, 121);
+}
+
 #tabla {
     width: 620px;
     height: 620px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-content: space-between;
 }
 
-#tabla div{
+#tabla div {
     width: 200px;
     height: 200px;
-    background-color: rgb(0, 80, 184);
-    color: red;
+    background-color: rgb(255, 253, 148);
+    color: rgb(0, 0, 0);
     text-align: center;
-    font-size: large;
+    font-size: 180px;
+    font-family: 'Microsoft Sans Serif';
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 10px;
 }
 
 #tabla div:hover {
-    background-color: rgb(19, 94, 255);
-}
-
-
-body {
-    margin: 0;
-    background-color: rgb(100, 100, 100);
+    background-color: rgb(181, 255, 7);
+    color: rgb(3, 48, 40);
 }
